2006-06-26  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/mime.el (mime-mode): remove faulty comment (bug in here)

	* config/ediff-config.el (require): fix compilation issue

	* config/compile-config.el: fix compilation issue

2006-06-25  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el ([insert]): undefine it

	* perso/mycode.el: comment out problematic font-locking

	* latex-style/beamer.el: initial checkin

2006-06-08  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el (kbd): C-c k is now irrelevant
	(emms): new setup for emms 2

	* config/lisp-config.el (yh/insert-elisp-key): function to ease key definition

2006-06-04  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/visual.el (default-frame-alist): leave only common configuration
	(window-system-default-frame-alist): specific settings here

	* config/org-config.el (org-insert-heading): advice this function instead

2006-05-30  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/physical-line.el: initial checkin

	* perso/paredit.el: update to newest beta

2006-05-29  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el (org-config): load by default
	trigger (org-agenda-list) at startup
	(file-exists-p): absolute filenames in non-local config is *bad* :)

	* config/planner-config.el (kbd): move keybindings to config file

	* config/org-config.el: initial checkin.

	* config/calendar-config.el: disable those useless holidays
	(diary-cyclic-bounded): small variation of diary-cyclic

2006-05-05  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/tempo-c++.el (c-mode-common-hook): use common hook

	* perso/paredit.el: initial checkin

	* dotemacs.el: various fixes

	* config/lisp-config.el (paredit-mode): activate paredit-mode

2006-03-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el: persistant scratch buffer

	* dotemacs-cust.el (custom-set-variables): recursive minibuffer rocks, emacs is now more paranoid about local variables

2006-03-07  Yann Hodique  <Yann.Hodique@lifl.fr>
