@@ -60,7 +60,7 @@
 (when (request 'icomplete)
   (icomplete-mode 1)
   (request 'icomplete+))
-;(when (request 'iswitchb) (iswitchb-mode 1))
+;; (when (request 'iswitchb) (iswitchb-mode 1))
 
 (provide 'buffer-config)
 ;;; buffer-config.el ends here
