@@ -88,15 +88,6 @@
  '(glasses-separator "")
  '(global-font-lock-mode t nil (font-lock))
  '(global-hl-line-hack-mode t)
- '(global-semantic-decoration-mode t nil (semantic-decorate-mode))
- '(global-semantic-highlight-by-attribute-mode t nil (semantic-util-modes))
- '(global-semantic-highlight-edits-mode nil nil (semantic-util-modes))
- '(global-semantic-idle-scheduler-mode t nil (semantic-idle))
- '(global-semantic-show-parser-state-mode t nil (semantic-util-modes))
- '(global-semantic-show-tag-boundaries-mode t nil (semantic-util-modes))
- '(global-semantic-show-unmatched-syntax-mode nil nil (semantic-util-modes))
- '(global-semantic-stickyfunc-mode nil nil (semantic-util-modes))
- '(global-senator-minor-mode t nil (senator))
  '(global-visible-mark-mode-exclude-alist (quote ("^\\*")))
  '(gnus-cacheable-groups ".*")
  '(gnus-uncacheable-groups nil)
@@ -151,7 +142,6 @@
  '(sawfish-extra-keyword-list (quote ("add-frame-style" "call-after-load" "call-after-property-changed" "call-after-state-changed" "custom-set-property" "define" "define-structure" "export" "open")))
  '(sawfish-warning-keyword-list (quote ("fixme" "FIXME" "Fixme" "fix me" "Fix me" "!!!" "Grrr" "Bummer" "todo" "TODO" "Todo")))
  '(scroll-bar-mode nil)
- '(semanticdb-global-mode t nil (semanticdb))
  '(sh-shell-file "/bin/bash")
  '(show-paren-mode t)
  '(size-indication-mode t)
@@ -264,6 +254,3 @@
  '(w3-style-face-00005 ((t (:underline nil :height 150))))
  '(w3-style-face-00007 ((t (:underline nil :height 150))))
  '(w3-style-face-00008 ((t (:underline nil :weight normal :height 150)))))
-
-;; not honoured by custom-set-property. TODO: investigate why
-(setq-default semanticdb-default-save-directory "~/.semantic")
